--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.+'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.+'
+    testImplementation 'io.rest-assured:rest-assured:4.+'
+
 }
 
 test {
